Added Ecmascript as a supported language for CPD.
The RuleSet XML Schema namespace is now: http://pmd.sourceforge.net/ruleset/2.0.0
The RuleSet XML Schema is located in the source at: etc/ruleset_2_0_0.xsd
The RuleSet DTD is located in the source at: etc/ruleset_2_0_0.dtd
Improved include/exclude pattern matching performance for ends-with type patterns.

New Java rules:

	Basic ruleset: ExtendsObject,CheckSkipResult,AvoidBranchingStatementAsLastInLoop
	Controversial ruleset: AvoidLiteralsInIfCondition, AvoidPrefixingMethodParameters, OneDeclarationPerLine, UseConcurrentHashMap
	Coupling ruleset: LoosePackageCoupling
	Design ruleset: LogicInversion,UseVarargs,FieldDeclarationsShouldBeAtStartOfClass
	Empty ruleset: EmptyInitializer,EmptyStatementBlock
	Import ruleset: UnnecessaryFullyQualifiedName
	Optimization ruleset: RedundantFieldInitializer
	Naming ruleset: ShortClassName, GenericsNaming
	StrictException ruleset: AvoidThrowingNewInstanceOfSameException, AvoidCatchingGenericException, AvoidLosingExceptionInformation
	Unnecessary ruleset: UselessParentheses
	JUnit ruleset: JUnitTestContainsTooManyAsserts, UseAssertTrueInsteadOfAssertEquals

New Java ruleset:
	android.xml: new rules specific to the Android platform

New JSP rules:
	Basic ruleset: NoInlineScript

New ECMAScript rules:
	Basic ruleset: AssignmentInOperand,ConsistentReturn,InnaccurateNumericLiteral,ScopeForInVariable,UnreachableCode
	Braces ruleset: ForLoopsMustUseBraces,IfStmtsMustUseBraces,IfElseStmtsMustUseBraces,WhileLoopsMustUseBraces
	Unnecessary ruleset: UnnecessaryParentheses,UnnecessaryBlock

New XML rules:
	Basic ruleset: MistypedCDATASection

March 25, 2008 - 4.2:

Fixed bug 1920155 - CheckResultSet: Does not pass for loop conditionals

March 21, 2008 - 4.2rc2:
Fixed bug 1912831 - False + UnusedPrivateMethod with varargs
Fixed bug 1913536 - Rule Designer does not recognize JSP(XML)