@@ -6,18 +6,18 @@ package net.sourceforge.pmd.cpd;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.TreeMap;
 
 import net.sourceforge.pmd.util.FileFinder;
 
 public class CPD {
 
-    private Map<String, SourceCode> source = new HashMap<String, SourceCode>();
+    private Map<String, SourceCode> source = new TreeMap<String, SourceCode>();
     private CPDListener listener = new CPDNullListener();
     private Tokens tokens = new Tokens();
     private int minimumTileSize;
